# snn-evo

./: .aiignore  .gitignore  pyproject.toml  runner.py  test_performance_final.py  test_phase13_quick.py  test_unified_runner.py  test_unified_runner_final.py
.claude/: settings.local.json
benchmarks/: neo_performance.py
benchmarks/world/: benchmark_performance.py
configs/: neo_abl_dale.json  neo_abl_no_homeostasis.json  neo_abl_no_reward.json  neo_abl_no_stdp.json  neo_abl_no_thinking.json  neo_baseline.json  neo_lightweight.json
configs/examples/: large_stable.json  small_fast.json
configs/learning/: base.json  fast.json  stable.json  static.json
configs/learning_rules/: README.md  full.json  minimal.json  no_dale.json  no_dopamine.json  no_eligibility.json  no_homeostasis.json  no_reward_prediction.json  no_stdp.json  no_weight_constraints.json  strong_homeostasis.json  three_factor_only.json  weak_homeostasis.json
configs/learning_rules/parameter_sweeps/: dopamine_baseline_0.0.json  dopamine_baseline_0.1.json  dopamine_baseline_0.3.json  dopamine_baseline_0.5.json  eligibility_tau_1000.json  eligibility_tau_10000.json  eligibility_tau_500.json  eligibility_tau_5000.json  stdp_ratio_0.8.json  stdp_ratio_0.9.json  stdp_ratio_1.0.json  stdp_ratio_1.1.json  stdp_ratio_1.2.json
configs/neural/: base.json  large.json  small.json
experiments/: .gitignore  README.md
export/: NOTES.md  PERFORMANCE_ANALYSIS.md  README.md  __init__.py  benchmark.py  benchmark_enhancements.py  benchmark_minimal.py  benchmark_quick.py  benchmark_results.json  data_exporter.py  episode.py  example.py  exporter.py  exporter_optimized.py  exporter_robust.py  jax_data_exporter.py  loader.py  performance.py  performance_enhancements.py  schema.py  test_empty_array.py  test_export.py  test_integration_comprehensive.py  test_metadata_capture.py  test_optimized.py  test_performance_enhancements.py  utils.py
export/.claude/: settings.local.json
interfaces/: __init__.py  agent.py  config.py  episode_data.py  exporter.py  runner.py  world.py
models/: __init__.py  config_learning_rules.py  runner.py
models/.claude/: settings.local.json
models/archive/0-4/: README.md  brian2_vs_jax_analysis.md  phase04_enhanced.py  phase04_enhanced_export.py  phase04_research.py
models/common/: __init__.py
models/phase_0_10/: __init__.py  agent.py  agent_vectorized.py  config.py  quick_test.py  run.py
models/phase_0_11/: __init__.py  agent.py  agent_vectorized.py  config.py  run.py  test_integration.py  test_phase11_fixed.py
models/phase_0_12/: __init__.py  agent.py  config.py  quick_test.py  run.py
models/phase_0_13/: __init__.py  agent.py  config.py  run.py  run_optimized.py
models/phase_0_14_neo/: __init__.py  agent.py  config.py  dynamics.py  run.py  state.py
models/phase_0_5/: __init__.py  agent.py  config.py  run.py
models/phase_0_6/: __init__.py  agent.py  config.py  run.py
models/phase_0_7/: __init__.py  agent.py  config.py  run.py
models/phase_0_8/: __init__.py  agent.py  agent_vectorized.py  config.py  quick_test.py  run.py
models/phase_0_9/: __init__.py  agent.py  config.py  run.py  test_gradient_reward.py  test_phase08.py  test_run.py
models/random/: README.md  __init__.py  agent.py  check_rewards.py  config.py  inspect_data.py  minimal_exporter.py  run.py  run_with_export.py  simple_run.py
research/: analytics.typ  paper.typ  refs.bib  sota-learning.bib  sota-learning.typ  template.typ
rules/: __init__.py  adapter.py  base.py  homeostatic.py  neuromodulation.py  pipeline.py  registry.py  structural.py  synaptic.py
tests/: test_exporter.py  test_jax_exporter.py  test_jax_integration.py  test_performance.py
tests/export/: test_exporter_performance.py
tests/integration/: test_episode_flow.py  test_protocol_compliance.py
tests/models/: test_agent_interface.py
tests/world/: test_performance.py  test_reward_history.py  test_reward_history_jax.py  test_simple.py  test_world.py  test_world_corrected.py  test_world_performance.py
visualization/3d/: .gitignore  CHANGELOG.md  IMPROVEMENTS.md  README.md  SETUP.md  api_server.py  debug.html  extract_all_runs.py  extract_h5_data.py  extract_run_data.py  extract_trajectory.py  grid_world_h5_viewer.html  grid_world_trajectory_viewer.html  h5_loader.js  index.html  launch.py  run_visualization.py  runs_index.json  scan_runs.py  serve.py  server.py  simple_server.py  trajectory_data.json  trajectory_episode_20250605_191817.json  trajectory_episode_20250605_192815.json  trajectory_episode_20250605_194407.json  viewer.js
visualization/3d/css/: main.css
visualization/3d/js/: alpine-app.js  alpine-stores.js  alpine-tooltips.js  app.js  chart-manager.js  data-manager.js  export-manager.js  neural-visualizer.js  polyfills.js  simple-charts.js  simple-data-manager.js  simple-neural.js  simple-viewport.js  timeline-controller.js  viewport-3d.js
visualization/sci/: data_parser.py  generate_report.py
visualization/sci/runs/: neo_lightweight_baseline_42_20250610_082709.html  neo_lightweight_baseline_42_20250610_084319.html  neo_lightweight_ei_half_42_20250610_085909.html  neo_lightweight_no_homeostasis_42_20250610_083340.html  neo_lightweight_no_homeostasis_42_20250610_085823.html  neo_lightweight_no_reward_42_20250610_083459.html  neo_lightweight_no_reward_42_20250610_084333.html  neo_lightweight_no_reward_42_20250610_090438.html  neo_lightweight_no_stdp_42_20250610_083419.html  neo_lightweight_no_stdp_42_20250610_084325.html  neo_neo_abl_no_thinking_42_20250610_083300.html  (+3 more)
world/: 0001_simple_grid_summary.md  README.md  __init__.py  benchmark_all.py  quick_benchmark.py  test_compatibility.py
world/simple_grid_0001/: README.md  __init__.py  example.py  test_respawn.py  test_world.py  types.py  world.py
world/simple_grid_0002/: __init__.py  benchmark.py  test_jit.py  test_simple.py  world.py
world/simple_grid_0003/: PERFORMANCE.md  Untitled-2.ini  __init__.py  benchmark.py  debug_test.py  test_correctness.py  test_issues.md  types.py  world.py
world/simple_grid_0004/: __init__.py  world.py
(+8 files in other folders)
